<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ATCommandParametersActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <!-- Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scenario_information"
            android:textColor="#FFFF00"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints" />

        <!-- layout_environmental_parameters -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_ble_version"
                    android:textStyle="bold"/>
                <Spinner
                    android:id="@+id/phoneBleVersion"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Distance (meter): "/>

                <EditText
                    android:id="@+id/distanceMin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="Min"
                    android:gravity="center"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/distanceMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:hint="Max"
                    android:gravity="center"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/obstacle_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/number_of_obstacles"
                    android:gravity="center"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/obstacle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Spinner
                    android:id="@+id/indoor_outdoor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    tools:ignore="MissingConstraints" />
                <EditText
                    android:id="@+id/moreExplanation"
                    android:layout_margin="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/explanations"
                    android:gravity="center"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#000000"
                android:padding="10dp">
                <CheckBox
                    android:id="@+id/wifi_cb"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Wi-Fi"
                    android:textStyle="bold"/>
                <CheckBox
                    android:id="@+id/ipv6_cb"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="IP-v6"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- Buttons layers-->
            <Button
                android:id="@+id/btn_Save"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="Save" />

        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>